# Tree-Knowledge

./: .gitignore  AGENTS.md  DESIGN.md  PLAN.md  README.md  drizzle.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
components/workspace/: KnowledgeGraph.tsx
docs/: README.md  api-contract.md  architecture.md  context-rules.md  data-model.md  llm-context.md  mvp-roadmap.md  mvp-workspace.md  page-architecture.md  page-spec.md  product-spec.md  roadmap.md  tech-stack.md  testing.md  vision.md  visual-spec.md  wireframes.md
drizzle/: 0000_overconfident_arachne.sql
drizzle/meta/: 0000_snapshot.json
src/: App.css  App.tsx  context.ts  llm.ts  main.tsx  mockData.ts  seedData.ts  styles.css  types.ts  utils.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: main.toml
src-tauri/src/: db.rs  errors.rs  lib.rs  llm.rs  main.rs  models.rs  providers.rs  services.rs
src/app/: App.tsx  command-client.ts  contracts.ts  mock-data.ts
src/components/: AppHeader.tsx  CanvasToolbar.tsx  ContextPreview.tsx  KnowledgeDialogs.tsx  LibraryOverview.tsx  TreeCanvas.tsx
src/domain/: ids.ts  knowledgeBase.ts  nodeContent.ts  nodeSuggestions.ts  retrieval.ts  treeLayout.ts
src/hooks/: useKnowledgeWorkspace.ts
src/lib/: llmStream.ts
src/main/: main.ts  paths.test.ts  paths.ts
src/preload/: index.ts
src/renderer/: App.tsx  env.d.ts  index.css
src/ui/: markdownComponents.tsx  styleTokens.ts
tests/e2e/: smoke_ui.py
(+15 files in other folders)
