[package]
name = "tree-knowledge"
version = "0.1.0"
description = "A tree-shaped LLM context workspace."
authors = ["Tree Knowledge"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tree_knowledge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tree-knowledge"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
